Fix mobile horizontal scroll & ul padding

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ a {
 ul,
 li {
   list-style: none;
+  padding: 0;
 }
 
 button {
@@ -29,6 +30,12 @@ button {
 
 section {
   padding-top: 50px;
+}
+
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .title {
@@ -177,7 +184,6 @@ section {
   align-items: center;
   padding: 50px 16px 8px;
   margin: 0 auto 60px;
-  max-width: 800px;
 }
 
 .about__profile {
@@ -369,6 +375,7 @@ section {
 
   .about {
     margin-bottom: 100px;
+    max-width: 800px;
   }
 
   .about__title {
